--- a/Landmarks/Landmarks/localization/en.lproj/Localizable.strings
+++ b/Landmarks/Landmarks/localization/en.lproj/Localizable.strings
@@ -9,3 +9,21 @@
 "helloworld" = "blbl";
 "login" = "login";
 "password" = "password";
+"connection" = "connection";
+"actual" = "actual";
+"history" = "history";
+"quantity" = "quantity";
+"value" = "value";
+"Importantmessage" = "Important message";
+"Notavailable" = "Not available";
+"Gotit" = "Got it";
+"Total" = "Total";
+"buy" = "buy";
+"HowMany" = "How Many";
+"doyouwanttobuy?" = "do you want to buy ?";
+"MarketCap" = "Market Cap";
+"Low" = "Low";
+"High" = "High";
+"Volume" = "Volume";
+"Circulating" = "Circulating";
+
