--- a/Landmarks/Landmarks/localization/de.lproj/Localizable.strings
+++ b/Landmarks/Landmarks/localization/de.lproj/Localizable.strings
@@ -7,3 +7,25 @@
 */
 
 "helloworld" = "gutentag";
+"login" = "Anmeldung";
+"password" = "Passwort";
+"connection" = "Verbindung";
+"actual" = "tatsächlich";
+"history" = "history";
+"quantity" = "Geschichte";
+"value" = "Wert";
+"Importantmessage" = "Wichtige Mitteilung";
+"Notavailable" = "Nicht verfügbar";
+"Gotit" = "Ich habs";
+"Total" = "Gesamt";
+"buy" = "Kaufen";
+"sell" = "verkaufen";
+"HowMany" = "Wie viele";
+"doyouwanttobuy?" = "Möchten sie kaufen ?";
+"MarketCap" = "Marktkapitalisierung";
+"Low" = "Niedrig";
+"High" = "Hoch";
+"Volume" = "Volumen";
+"Circulating" = "Zirkulieren";
+"Nosell" = "Keine Ethereum to zell";
+
